[tool.poetry]
name = "debian-repo-scrape"
version = "0.1.1"
description = "Utilities for verifying debian repositories and retrieving their information"
authors = ["Jan Vollmer <zunder325@gmail.com>"]
license = "MIT License"
readme="README.md"
repository="https://github.com/kreyoo/debian-repo-scrape"
classifiers=[
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
python-debian = "^0.1.43"
beautifulsoup4 = "^4.10.0"
PGPy = "^0.5.4"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
Flask = "^2.1.2"
pytest = "^7.1.1"
black = "^22.3.0"
pre-commit = "^2.17.0"
mypy = "^0.950"
pytest-cov = "^3.0.0"
pytest-lazy-fixture = "^0.6.3"
tox-poetry = "^0.4.1"
tox = "^3.25.0"
types-beautifulsoup4 = "^4.10.20"
flake8 = "^4.0.1"
pytest-flask = "^1.2.0"
types-requests = "^2.27.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["debian_repo_scrape"]
python_version = "3.7"

[[tool.mypy.overrides]]
module = 'pgpy'
ignore_missing_imports = "True"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--live-server-port 5000 --cov --cov-report=html --cov-report=xml"



[tool.tox]
legacy_tox_ini = """
[tox]
envlist= py37,py38, py39, py310

[testenv]
commands =
    pytest

"""
